Fixed Menu toggle jumping to top of pg

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -32,7 +32,6 @@ body    {
 
 body.menu-open  {
     overflow: hidden;
-    position: fixed;
     width: 100%;
 }
 
